--- a/Resources/views/Datagrid/table-head-th.html.twig
+++ b/Resources/views/Datagrid/table-head-th.html.twig
@@ -19,7 +19,7 @@
     {{ dg.trans(cell.label, transDomain)|raw }}
   {%- endif -%}
   {%- for sortKey, theadLink in cell.theadLinks -%}
-    <a class="{{ classesLink }}" href="{{ dg.path(theadLink) }}" title="{{ 'Sortieren nach:'|trans }} {{ dg.trans(cell.getSortKeyLabel(sortKey), transDomain) }}">
+    <a class="{{ classesLink }}" href="{{ dg.path(theadLink) }}" title="{{ 'Sortieren nach:'|trans }} {{ dg.trans(cell.getSortKeyText(sortKey), transDomain) }}">
       {{- dg.trans(cell.getSortKeyLabel(sortKey), transDomain)|raw -}}
       {%- if datagrid.isSorted(sortKey) -%}
         {%- if datagrid.getSortationDirection(sortKey) == 'asc' -%}
