--- a/Resources/views/Menu/search-fields/text.html.twig
+++ b/Resources/views/Menu/search-fields/text.html.twig
@@ -6,13 +6,16 @@
 {% if datagrid.bootstrap['version'] == 'v4' %}
   {% set classesGroup = 'my-1 mr-sm-2 ' ~ dg.classesAndSize(datagrid, 'input-group') %}
   {% set classesAddon = 'input-group-prepend' %}
+  {% set classesInfo = dg.icon(datagrid, 'search_info') ~ ' ' ~ dg.classes(datagrid, 'search_info') %}
 {% else %}
   {% set classesGroup = 'input-group input-group-sm' %}
   {% set classesAddon = 'input-group-addon' %}
+  {% set classesInfo = 'glyphicon glyphicon-info-sign' %}
 {% endif %}
 
+{% set desc = searchField['desc']|default(null) %}
 
 <div class="{{ classesGroup }}">
-  <span class="{{ classesAddon }}"><span class="input-group-text">abc</span></span>
+  <span class="{{ classesAddon }}"><span class="input-group-text">abc{% if desc %}&nbsp;<i class="{{ classesInfo }}" title="{{ desc }}"></i>{% endif %}</span></span>
   <input type="text" class="form-control" placeholder="{{ dg.trans(searchField['label'], transDomain) }}" name="{{ searchKey }}" value="{{ datagrid.menu.searchValue(searchKey) }}">
 </div>
