--- a/Resources/views/Datagrid/table-body.html.twig
+++ b/Resources/views/Datagrid/table-body.html.twig
@@ -2,7 +2,7 @@
 
 <tbody class="datagrid-table-body">
 {% for row, obj in datagrid.results %}
-  <tr>
+  <tr {{ datagrid.parseRowAttr(obj, row)|raw }}>
     {% for column, cell in datagrid.cells %}
       {% if (cell.isVisibleNormal and not datagrid.extended) or (cell.isVisibleExtended and datagrid.extended) %}
         <td {{ cell.attr('td')|raw }}>
