--- a/Resources/views/Menu/navbar-v3.html.twig
+++ b/Resources/views/Menu/navbar-v3.html.twig
@@ -80,6 +80,8 @@
             {% for searchKey, searchField in datagrid.menu.searchFields %}
               {% if searchField['extended'] is not defined or not searchField['extended'] or datagrid.extended %}
                 <div class="form-group">
+                  {% if searchField['type'] == 'hidden' %}
+                    {% include '@HBMDatagrid/Menu/search-fields/hidden.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField, 'transDomain': transDomain } only %}
                   {% if searchField['type'] == 'number' %}
                     {% include '@HBMDatagrid/Menu/search-fields/number.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField, 'transDomain': transDomain } only %}
                   {% elseif searchField['type'] == 'select' %}
