--- a/Resources/views/Menu/navbar-v4.html.twig
+++ b/Resources/views/Menu/navbar-v4.html.twig
@@ -32,7 +32,9 @@
 
           {% for searchKey, searchField in datagrid.menu.searchFields %}
             {% if searchField['extended'] is not defined or not searchField['extended'] or datagrid.extended %}
-              {% if searchField['type'] == 'number' %}
+              {% if searchField['type'] == 'hidden' %}
+                {% include '@HBMDatagrid/Menu/search-fields/hidden.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField, 'transDomain': transDomain } only %}
+              {% elseif searchField['type'] == 'number' %}
                 {% include '@HBMDatagrid/Menu/search-fields/number.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField, 'transDomain': transDomain } only %}
               {% elseif (searchField['type'] == 'date') or (searchField['type'] == 'datetime') %}
                   {% include '@HBMDatagrid/Menu/search-fields/datetime.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField, 'transDomain': transDomain } only %}
@@ -63,7 +65,7 @@
         {% endif %}
 
         {% if datagrid.menu.showExport %}
-          <div class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn-group') }}" role="group">
+          <div class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn_group') }}" role="group">
             <button class="dropdown-toggle {{ dg.classes(datagrid, 'btn') }}" type="button" id="{{ datagrid_id~'-export' }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               {{ 'Export'|trans }}
             </button>
@@ -81,7 +83,7 @@
         {% endif %}
 
         {% if datagrid.menu.showMaxEntriesSelection %}
-          <div class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn-group') }}">
+          <div class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn_group') }}">
             <button class="dropdown-toggle {{ dg.classes(datagrid, 'btn') }}" type="button" id="{{ datagrid_id~'-maxentries' }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               {{ datagrid.maxEntriesPerPage }} {{ 'Einträge'|trans }}
             </button>
