--- a/Resources/views/Menu/navbar-v4.html.twig
+++ b/Resources/views/Menu/navbar-v4.html.twig
@@ -34,6 +34,8 @@
             {% if searchField['extended'] is not defined or not searchField['extended'] or datagrid.extended %}
               {% if searchField['type'] == 'hidden' %}
                 {% include '@HBMDatagrid/Menu/search-fields/hidden.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField, 'transDomain': transDomain } only %}
+              {% elseif searchField['type'] == 'none' %}
+                {% include '@HBMDatagrid/Menu/search-fields/none.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField, 'transDomain': transDomain } only %}
               {% elseif searchField['type'] == 'number' %}
                 {% include '@HBMDatagrid/Menu/search-fields/number.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField, 'transDomain': transDomain } only %}
               {% elseif (searchField['type'] == 'date') or (searchField['type'] == 'datetime') %}
