--- a/Resources/views/Menu/partials/options.html.twig
+++ b/Resources/views/Menu/partials/options.html.twig
@@ -31,9 +31,9 @@
           {% else %}
             {% set optionAttributes = optionAttributes.set('checked', optionAttributes.get('value') in datagrid.menu.searchValue(searchKey ~ '-options')) %}
           {% endif %}
-          <label class="btn btn-input-group-addon">
+          <label class="btn btn-input-group-addon" title="{{ optionData['title']|default(null) }}">
             <input {{ optionAttributes|raw }}>
-            {%- if optionData['icon']|default(null) -%}<i class="{{ optionData['icon'] }}" title="{{ optionData['title']|default(null) }}"></i>{%- endif -%}
+            {%- if optionData['icon']|default(null) -%}<i class="{{ optionData['icon'] }}"></i>{%- endif -%}
             {{- optionData['content']|default(null)|raw -}}
           </label>
         {% endfor %}
