--- a/Resources/views/Menu/actions/navbar-v4-reset.html.twig
+++ b/Resources/views/Menu/actions/navbar-v4-reset.html.twig
@@ -3,7 +3,7 @@
 {% import '@HBMDatagrid/macros.html.twig' as dg %}
 
 {% if datagrid.menu.showReset and datagrid.menu.routeReset %}
-  <a class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn') }}" href="{{ dg.path(datagrid.menu.routeReset) }}" title="{{ 'Sortierung/Filter zurücksetzen'|trans }}">
+  <a class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn') ~ classes|default('') }}" href="{{ dg.path(datagrid.menu.routeReset) }}" title="{{ 'Sortierung/Filter zurücksetzen'|trans }}">
     <span class="{{ dg.icon(datagrid, 'reset') }}"></span> {{ 'Reset'|trans }}
   </a>
 {% endif %}
