--- a/Resources/views/Menu/actions/navbar-v4-exports.html.twig
+++ b/Resources/views/Menu/actions/navbar-v4-exports.html.twig
@@ -3,7 +3,7 @@
 {% import '@HBMDatagrid/macros.html.twig' as dg %}
 
 {% if datagrid.menu.showExport %}
-  <div class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn_group') ~ classes|default('') }}" role="group">
+  <div class="{{ datagrid_actions_classes ~ dg.classesAndSize(datagrid, 'btn_group') ~ ' ' ~ classes|default('') }}" role="group">
     <button class="dropdown-toggle {{ dg.classes(datagrid, 'btn') }}" type="button" id="{{ datagrid_id~'-export' }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       {{ 'Export'|trans }}
     </button>
