Add different class option for search button.

--- a/Resources/views/Menu/elements/navbar-v4-search-form.html.twig
+++ b/Resources/views/Menu/elements/navbar-v4-search-form.html.twig
@@ -23,6 +23,6 @@
       {% endif %}
     {% endfor %}
 
-    <button type="submit" class="{{ dg.classesAndSize(datagrid, 'btn') }}"> <span class="{{ dg.icon(datagrid, 'search') }}"></span> {{ 'Suchen'|trans }}</button>
+    <button type="submit" class="{{ dg.classesAndSize(datagrid, 'btn_search') }}"> <span class="{{ dg.icon(datagrid, 'search') }}"></span> {{ 'Suchen'|trans }}</button>
   </form>
 {% endif %}
