--- a/templates/Menu/actions/navbar-v4-exports.html.twig
+++ b/templates/Menu/actions/navbar-v4-exports.html.twig
@@ -7,11 +7,11 @@
     <button class="dropdown-toggle {{ dg.classes(datagrid, 'btn') }}" type="button" id="{{ datagrid_id~'-export' }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       {{ 'Export'|trans }}
     </button>
-    <ul class="dropdown-menu" aria-labelledby="{{ datagrid_id~'-export' }}">
+    <ul class="dropdown-menu datagrid-exports" aria-labelledby="{{ datagrid_id~'-export' }}">
       {% for export in datagrid.menu.exportsSelection %}
-        <li>
+        <li class="datagrid-export">
           <a class="dropdown-item" href="#" onclick="document.getElementById('{{ datagrid_id~'-export-'~export }}').submit(); return false;" title="{{ 'Daten als :type exportieren'|trans({':type': export}) }}">{{ ':ext-Export'|trans({':ext': export|upper}) }}</a>
-          <form id="{{ datagrid_id~'-export-'~export }}" action="{{ dg.path(datagrid.menu.route) }}" method="post">
+          <form id="{{ datagrid_id~'-export-'~export }}" class="datagrid-export-form" action="{{ dg.path(datagrid.menu.route) }}" method="post">
             <input type="hidden" name="export-type" value="{{ export }}" />
           </form>
         </li>
